Fix generation order for sound events and enchantments
Fix use of deprecated stuff
Bump resource pack version